--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
-	"type": "module"
+	"type": "module",
+	"engines": {
+		"node": ">=18.15.0"
+	}
 }
